--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,7 @@
 $very-dark-blue: hsl(233, 47%, 7%); // (main background)
 $dark-desaturated-blue: hsl(244, 38%, 16%); // (card background)
 $soft-violet: hsl(277, 64%, 61%); // (accent)
+$soft-violet-opacity: hsla(277deg, 100%, 30%, 0.5); // (accent)
 
 //### Neutral
 
