multiply blend mode

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -43,10 +43,11 @@ body {
 
       .image__overlay {
         position: absolute;
-        background-color: $soft-violet-opacity;
+        background-color: $soft-violet;
         width: 100%;
         height: 100%;
         top: 0;
+        mix-blend-mode: multiply;
       }
 
     }
